--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ numpy = ">=1.16.2"
 scipy = ">=1.2.1"
 pandas = ">=0.21.0"
 matplotlib = ">=2.2.4"
+scikit-learn = ">=0.20.4"
 XlsxWriter = ">=1.1.5"
 enum34 = {version = ">=1.1.6",markers = "python_version < '3.4'"}
 future = {version = ">=0.18.2",markers = "python_version < '3'"}
@@ -44,3 +45,4 @@ sphinx-rtd-theme = "~=0.4.3"
 sphinx-autobuild = "~=0.7.1"
 bump2version = "*"
 pandoc = "*"
+Cython = ">=0.29.16"
